# Geta-Mouse

./: CMakeLists.txt  README.md  run.sh
include/: game.h  gui.h  rectAnimation.h  textAnimation.h
src/: button.cpp  game.cpp  main.cpp  rectAnimation.cpp  textAnimation.cpp
